0029400: Fuse of two edges creates self-interfered shape

Avoid creation of the edges with too small valid range (not allowing to split the edge) and interfering vertices.
Test case for the issue.